fix: Adjust h1 font size and line height for improved readability

--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -31,11 +31,11 @@
 }
 
 .text-content h1 {
-  font-size: 2rem;
+  font-size: 5rem;
   margin: 10px 0;
   letter-spacing: -10px;
   font-weight: 800;
-  line-height: 7.9rem;
+  line-height: 5rem;
 }
 
 .text-content p {
